trying to fix home page jumbotron on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,7 @@ body{
     
 }
 
-.itcc_logo_nice{
-    max-width: 100%;
-    height: auto;
-}
+
 
 .table-info {
     color: #dedede;
